# undupes

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  delete_script.sh  format.sh  functional_tests.sh  install.sh  install_deb  run_all_tests.sh  static_analyzer.sh  test_directory.sh  test_with_docker.sh  test_with_fdupes.py
cmake/: Packing.cmake
doxygen/: doxygen_config.conf
src/: CMakeLists.txt  bin_compare_files.cpp  bin_compare_files.h  cli.cpp  cli.h  debug.cpp  debug.h  file.cpp  file.h  filter.cpp  filter.h  filters_list.cpp  filters_list.h  io.cpp  io.h  main.cpp
tests/: CMakeLists.txt  bin_compare_files_test.cpp  file_test.cpp  filter_test.cpp  filters_list_test.cpp  io_test.cpp
tests/artifacts/: broken_symlink_1  nested_broken_symlink_1  symlink_1  symlink_2  symlink_3  symlink_4  symlink_5
tests/artifacts/dir_2/: 1KB_5  2KB_1  2KB_2  2KB_3  2KB_4  2KB_5  3KB_1  3KB_3  3KB_4  3KB_5  4KB_2  4KB_3  4KB_4  4KB_5  5KB_1  5KB_2  5KB_3  5KB_4  5KB_5
tests/artifacts/dir_3/: 1KB_1.copy.3  1KB_2.copy.1  1KB_3  1KB_4  3KB_2  4KB_1
tests/artifacts/functional_test/: delete_script.sh  delete_script_dry_run.sh  expected_dir_3.json  expected_dir_3_delete_1.in  expected_dir_3_output.txt  expected_dir_3_summary.txt
tests/io/: parse_input.in  remove_file_io_test_1.out  remove_file_io_test_2.in  remove_file_io_test_2.out  remove_file_io_test_3.in  remove_file_io_test_3.out  show_file_list.out  sorted_file_list.out
